--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Local</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A4DE4AF3-F06D-4D0F-AF2E-E72A11BAB49B}</ProjectGuid>
+    <ProjectGuid>{E7451275-D6E9-43CD-824D-324AB17FB2F0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SFA.Apprenticeships.Infrastructure.Repositories.Mongo</RootNamespace>
-    <AssemblyName>SFA.Apprenticeships.Infrastructure.Repositories.Mongo</AssemblyName>
+    <RootNamespace>SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests</RootNamespace>
+    <AssemblyName>SFA.Apprenticeships.Infrastructure.Repositories.Mongo.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -74,16 +74,16 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=3.3.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.dll</HintPath>
+    <Reference Include="FizzWare.NBuilder, Version=3.0.1.0, Culture=neutral, PublicKeyToken=5651b03e12e42c12, processorArchitecture=MSIL">
+      <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="AutoMapper.Net4, Version=3.3.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.Net4.dll</HintPath>
+    <Reference Include="FluentAssertions, Version=4.2.1.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.4.2.1\lib\net45\FluentAssertions.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="CuttingEdge.Conditions, Version=1.2.0.11174, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
-      <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
+    <Reference Include="FluentAssertions.Core, Version=4.2.1.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.4.2.1\lib\net45\FluentAssertions.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MongoDB.Bson, Version=1.10.0.62, Culture=neutral, PublicKeyToken=f686731cfb9cc103, processorArchitecture=MSIL">
@@ -92,6 +92,14 @@
     </Reference>
     <Reference Include="MongoDB.Driver, Version=1.10.0.62, Culture=neutral, PublicKeyToken=f686731cfb9cc103, processorArchitecture=MSIL">
       <HintPath>..\packages\mongocsharpdriver.1.10.0\lib\net35\MongoDB.Driver.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ploeh.AutoFixture, Version=3.38.1.0, Culture=neutral, PublicKeyToken=b24654c590009d4f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoFixture.3.38.1\lib\net40\Ploeh.AutoFixture.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="StructureMap, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
@@ -112,81 +120,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Applications\ApprenticeshipApplicationRepository.cs" />
-    <Compile Include="Applications\Entities\MongoApprenticeshipApplicationDetail.cs" />
-    <Compile Include="Applications\Entities\MongoTraineeshipApplicationDetail.cs" />
-    <Compile Include="Applications\IoC\ApplicationRepositoryRegistry.cs" />
-    <Compile Include="Applications\Mappers\ApprenticeshipApplicationMappers.cs" />
-    <Compile Include="Applications\Mappers\TraineeshipApplicationMappers.cs" />
-    <Compile Include="Applications\TraineeshipApplicationRepository.cs" />
-    <Compile Include="Audit\AuditRepository.cs" />
-    <Compile Include="Audit\Entities\AuditItem.cs" />
-    <Compile Include="Audit\IoC\AuditRepositoryRegistry.cs" />
-    <Compile Include="Authentication\AuthenticationRepository.cs" />
-    <Compile Include="Authentication\Entities\MongoUserCredentials.cs" />
-    <Compile Include="Authentication\IoC\AuthenticationRepositoryRegistry.cs" />
-    <Compile Include="Authentication\Mappers\AuthenticationMappers.cs" />
-    <Compile Include="Candidates\CandidateRepository.cs" />
-    <Compile Include="Candidates\Entities\MongoCandidate.cs" />
-    <Compile Include="Candidates\Entities\MongoSavedSearch.cs" />
-    <Compile Include="Candidates\IoC\CandidateRepositoryRegistry.cs" />
-    <Compile Include="Candidates\Mappers\CandidateMappers.cs" />
-    <Compile Include="Candidates\SavedSearchRepository.cs" />
-    <Compile Include="Common\Configuration\MongoConfiguration.cs" />
-    <Compile Include="Common\GenericMongoClient.cs" />
-    <Compile Include="Common\IMongoAdminClient.cs" />
-    <Compile Include="Common\MongoAdminClient.cs" />
-    <Compile Include="Communication\ApplicationStatusAlertRepository.cs" />
-    <Compile Include="Communication\CommunicationRepository.cs" />
-    <Compile Include="Communication\ContactMessageRepository.cs" />
-    <Compile Include="Communication\Entities\MongoApplicationStatusAlert.cs" />
-    <Compile Include="Communication\Entities\MongoApprenticeshipApplicationExpiringDraft.cs" />
-    <Compile Include="Communication\Entities\MongoContactMessage.cs" />
-    <Compile Include="Communication\Entities\MongoSavedSearchAlert.cs" />
-    <Compile Include="Communication\ExpiringApprenticeshipApplicationDraftRepository.cs" />
-    <Compile Include="Communication\IoC\CommunicationRepositoryRegistry.cs" />
-    <Compile Include="Communication\Mappers\CommunicationMappers.cs" />
-    <Compile Include="Communication\SavedSearchAlertRepository.cs" />
-    <Compile Include="Employers\EmployerRepository.cs" />
-    <Compile Include="Employers\Entities\MongoEmployer.cs" />
-    <Compile Include="Employers\IoC\EmployerRepositoryRegistry.cs" />
-    <Compile Include="Employers\Mappers\EmployerMappers.cs" />
+    <Compile Include="Applications\ApprenticeshipApplicationReadRepositoryTests.cs" />
+    <Compile Include="Applications\ApprenticeshipApplicationWriteRepositoryTests.cs" />
+    <Compile Include="Applications\TraineeshipApplicationReadRepositoryTests.cs" />
+    <Compile Include="Candidates\CandidateRepositoryTests.cs" />
+    <Compile Include="Communication\ContactMessageRepositoryTests.cs" />
+    <Compile Include="Communication\ExpiringApprenticeshipApplicationDraftsRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\Entities\MongoProvider.cs" />
-    <Compile Include="Providers\Entities\MongoProviderSite.cs" />
-    <Compile Include="Providers\Entities\MongoProviderSiteEmployerLink.cs" />
-    <Compile Include="Providers\IoC\ProviderRepositoryRegistry.cs" />
-    <Compile Include="Providers\Mappers\ProviderMappers.cs" />
-    <Compile Include="Providers\ProviderRepository.cs" />
-    <Compile Include="Providers\ProviderSiteEmployerLinkRepository.cs" />
-    <Compile Include="Providers\ProviderSiteRepository.cs" />
-    <Compile Include="UserProfiles\AgencyUserRepository.cs" />
-    <Compile Include="UserProfiles\Entities\MongoAgencyUser.cs" />
-    <Compile Include="UserProfiles\Entities\MongoProviderUser.cs" />
-    <Compile Include="UserProfiles\IoC\UserProfileRepositoryRegistry.cs" />
-    <Compile Include="UserProfiles\Mappers\UserProfileMappers.cs" />
-    <Compile Include="UserProfiles\UserProfileRepository.cs" />
-    <Compile Include="Users\Entities\MongoUser.cs" />
-    <Compile Include="Users\IoC\UserRepositoryRegistry.cs" />
-    <Compile Include="Users\Mappers\UserMappers.cs" />
-    <Compile Include="Users\UserRepository.cs" />
-    <Compile Include="Vacancies\ApprenticeshipVacancyRepository.cs" />
-    <Compile Include="Vacancies\Entities\MongoApprenticeshipVacancy.cs" />
-    <Compile Include="Vacancies\Entities\MongoReferenceNumber.cs" />
-    <Compile Include="Vacancies\IoC\VacancyRepositoryRegistry.cs" />
-    <Compile Include="Vacancies\Mappers\ApprenticeshipVacancyMappers.cs" />
-    <Compile Include="Vacancies\OfflineApprenticeshipVacancyRepository.cs" />
-    <Compile Include="Vacancies\ReferenceNumberRepository.cs" />
+    <Compile Include="RepositoryIntegrationTest.cs" />
+    <Compile Include="Users\UserRepositoryTests.cs" />
+    <Compile Include="Vacancies\ApprenticeshipVacancyRepositoryTests.cs" />
+    <Compile Include="Vacancies\ApprenticeshipVacancyWriteRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Configs\settings.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
-      <Project>{2c577447-2405-46b3-8065-613a19a58541}</Project>
-      <Name>SFA.Apprenticeships.Application.Interfaces</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
       <Project>{4C2BE232-4DBD-44D0-B427-0450E2D857A5}</Project>
       <Name>SFA.Apprenticeships.Domain.Entities</Name>
@@ -199,14 +154,32 @@
       <Project>{78B1F2A1-DCC3-4ED3-8CE0-16E0781B59FA}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Logging\SFA.Apprenticeships.Infrastructure.Logging.csproj">
+      <Project>{A2D82061-BCBD-4030-9EB4-5148AEE79241}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Mongo\SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj">
+      <Project>{A4DE4AF3-F06D-4D0F-AF2E-E72A11BAB49B}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Mongo</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure\SFA.Infrastructure.csproj">
       <Project>{1F500137-C8E9-49AA-886E-1922D9D870EB}</Project>
       <Name>SFA.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
+  <PropertyGroup>
+    <PreBuildEvent>IF "%25COPY_CONFIG_FROM_SECURE_REPO%25" == "true" (
+SET COPY_PATH=$(ProjectDir)..\..\..\Apprenticeships\Configuration\Applications\$(ConfigurationName)\Configs\ 
+) else (
+SET COPY_PATH=$(ProjectDir)..\..\config\$(ConfigurationName)\Configs\
+)
+robocopy /IS %25COPY_PATH%25 $(ProjectDir)Configs *.config
+if %25errorlevel%25 leq 3 exit 0 else exit %25errorlevel%25</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
