--- a/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
@@ -288,7 +288,8 @@
     <Compile Include="DataContracts\Version51\VacancyUploadData.cs" />
     <Compile Include="DataContracts\Version51\VacancyUploadResultData.cs" />
     <Compile Include="DataContracts\Version51\WebInterfaceGenericDetailsData.cs" />
-    <Compile Include="Mappers\Version51\ReferenceDataMappers.cs" />
+    <Compile Include="Mappers\Version51\ICountyMapper.cs" />
+    <Compile Include="Mappers\Version51\CountyMapper.cs" />
     <Compile Include="Domain\WebServiceCategory.cs" />
     <Compile Include="Mediators\Version51\ServiceMediatorBase.cs" />
     <Compile Include="Providers\IWebServiceAuthenticationProvider.cs" />
@@ -407,6 +408,10 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Providers\SFA.Apprenticeships.Infrastructure.Repositories.Providers.csproj">
       <Project>{60B0072E-BC17-4D32-8331-A8A2C74B4500}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Repositories.Providers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Reference\SFA.Apprenticeships.Infrastructure.Repositories.Reference.csproj">
+      <Project>{20ddead1-3417-4a18-8186-d9c8ca88b690}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Reference</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.UserProfiles\SFA.Apprenticeships.Infrastructure.Repositories.UserProfiles.csproj">
       <Project>{5C01B37D-8C9E-454F-864A-8861E051A170}</Project>
