--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Reference/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Reference/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="4.1.1" targetFramework="net452" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
+  <package id="Dapper" version="1.42" targetFramework="net451" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
 </packages>
