--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="Dapper" version="1.42" targetFramework="net451" />
+  <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
+  <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net451" />
 </packages>
