--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/packages.config
@@ -4,4 +4,5 @@
   <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net451" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
 </packages>
