US876: wip, cleaning up local git.

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -146,6 +146,8 @@
     <Compile Include="Schemas\Vacancy\Entities\VacancyType.cs" />
     <Compile Include="Schemas\Vacancy\Entities\WageInterval.cs" />
     <Compile Include="Schemas\Vacancy\Entities\WageType.cs" />
+    <Compile Include="Schemas\WebService\Entities\WebServiceConsumer.cs" />
+    <Compile Include="Schemas\WebService\WebServiceMappers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
