--- a/src/SFA.Apprenticeships.Domain.Interfaces/SFA.Apprenticeships.Domain.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Interfaces/SFA.Apprenticeships.Domain.Interfaces.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Repositories\IProviderUserRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
     <Compile Include="Repositories\ICandidateRepository.cs" />
+    <Compile Include="Repositories\IWebServiceRepository.cs" />
     <Compile Include="Repositories\IWriteRepository.cs" />
     <Compile Include="Repositories\IReadRepository.cs" />
   </ItemGroup>
