Mappers and tests

--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -123,6 +123,8 @@
     <Compile Include="ReferenceData\Sector.cs" />
     <Compile Include="ReferenceData\Standard.cs" />
     <Compile Include="ReferenceNumber.cs" />
+    <Compile Include="Reference\Region.cs" />
+    <Compile Include="Reference\LocalAuthority.cs" />
     <Compile Include="Reference\County.cs" />
     <Compile Include="Roles.cs" />
     <Compile Include="Users\AgencyUser.cs" />
