--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
+  <package id="CuttingEdge.Conditions" version="1.2.0.0" targetFramework="net451" />
   <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net451" />
