Web proxy can now be restricted to a subset of URL

--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -7,7 +7,7 @@
   <appSettings>
     <add key="AreNonPrimaryRequestsEnabled" value="True"/>
     <add key="IsLoggingEnabled" value="True"/>
-    <add key="NasAvWebServiceRootUri" value="https://apprenticeshipvacancymatchingservice.lsc.gov.uk"/>
+    <add key="NasAvWebServiceRootUri" value="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/Services"/>
     <add key="CompatabilityWebServiceRootUri" value="http://sfa-service-dev.cloudapp.net"/>
     <add key="AutomaticRouteToCompatabilityWebServiceRegex" value=""/>
     <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
