US1011: map web service consumer type plus tests.

--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Vacancies\LegacyWageType.cs" />
     <Compile Include="WebServices\WebServiceCategory.cs" />
     <Compile Include="WebServices\WebServiceConsumer.cs" />
+    <Compile Include="WebServices\WebServiceConsumerType.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
