--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -147,6 +147,8 @@
     <Compile Include="Schemas\Vacancy\Entities\WageInterval.cs" />
     <Compile Include="Schemas\Vacancy\Entities\WageType.cs" />
     <Compile Include="Schemas\WebService\Entities\WebServiceConsumer.cs" />
+    <Compile Include="Schemas\WebService\WebServiceConsumerRepository.cs" />
+    <Compile Include="Schemas\WebService\WebServiceConsumerTypeResolver.cs" />
     <Compile Include="Schemas\WebService\WebServiceMappers.cs" />
   </ItemGroup>
   <ItemGroup>
