--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -246,6 +246,7 @@
     <Compile Include="ViewModels\Vacancy\StandardViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\SubmittedVacancyViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\ContactDetailsAndVacancyHistoryViewModel.cs" />
+    <Compile Include="ViewModels\Vacancy\TrainingDetailsViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\VacancyDatesViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\VacancyLinksViewModel.cs" />
     <Compile Include="ViewModels\Vacancy\VacancyQuestionsViewModel.cs" />
@@ -257,6 +258,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DateTime.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Shared\DisplayTemplates\Vacancy\TrainingDetails.generated.cs">
+      <DependentUpon>TrainingDetails.cshtml</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Views\Shared\DisplayTemplates\Vacancy\EmployerDetails.generated.cs">
       <DependentUpon>EmployerDetails.cshtml</DependentUpon>
@@ -332,6 +338,10 @@
     <Content Include="Views\Shared\DisplayTemplates\Vacancy\EmployerDetails.cshtml">
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>EmployerDetails.generated.cs</LastGenOutput>
+    </Content>
+    <Content Include="Views\Shared\DisplayTemplates\Vacancy\TrainingDetails.cshtml">
+      <Generator>RazorGenerator</Generator>
+      <LastGenOutput>TrainingDetails.generated.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
